--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "google-auth-library": "^9.14.2",
+    "google-spreadsheet": "^5.0.2",
     "googleapis": "^131.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
