Fix: Corregir errores de build en Render
- Agregar 'type': 'module' al package.json para eliminar warning
- Corregir importación de google-spreadsheet a named export
- Solucionar error 'does not provide an export named default'
- Mejorar performance eliminando reparsing de módulos
- Build y sintaxis verificados localmente
- Documentación completa de las correcciones
- Listo para deploy exitoso en Render

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back_test",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "src/server.js",
   "scripts": {
