--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "babel src --out-dir dist",
     "start": "node dist/server.js",
     "dev": "nodemon --exec babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:migrate-data": "node src/scripts/migrate-data.js",
+    "db:seed": "node src/scripts/seed.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +27,7 @@
   },
   "homepage": "https://github.com/joseirrazabal/back_test#readme",
   "dependencies": {
+    "@prisma/client": "^6.16.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
@@ -30,7 +37,8 @@
     "googleapis": "^131.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^6.16.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
