--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.16.3"
   },
   "devDependencies": {
